# Straight-Up-Hackathon

./: .gitignore  README.md  package-lock.json
career-predictor/: README.md  main.py  matrix_T_karrierewege.npy  occupations_en.csv  predictor.py  pyproject.toml
straight-up-hackathon/: components.json  package-lock.json  package.json
straight-up-hackathon/app/: globals.css  layout.tsx  page.tsx
straight-up-hackathon/app/api/advisor-chat/: route.ts
straight-up-hackathon/app/api/chat/: route.ts
straight-up-hackathon/app/api/node-insights/: route.ts
straight-up-hackathon/apps/web/: components.json  package.json
straight-up-hackathon/apps/web/app/: layout.tsx
straight-up-hackathon/components/: AdvisorChatPanel.tsx  CareerHistoryDialog.tsx  ChatPanel.tsx  ProfileIntakeDialog.tsx  SourcesDialog.tsx
straight-up-hackathon/context_files/: scrape.py
straight-up-hackathon/context_files/data/: source_registry.json
straight-up-hackathon/context_files/data/curated/: childcare_support.json  fertility_baselines.json  housing_timing.json  parenting_benefits.json
straight-up-hackathon/context_files/data/snippets/: mom_pdf_snippets.json
straight-up-hackathon/lib/: chat.ts  evidence.ts
